# SSD_Tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Tracker/: track.cpp  track.h
include/: Pipeline.h  defines.h  ssd_detect.h
models/: README.md
src/: main.cpp  ssd_detect.cpp
