cmake_minimum_required(VERSION 3.5)

# ----------------------------------------------------------------------------
# Set Project Name
# ----------------------------------------------------------------------------
set (PROJECT_NAME  SSD)


# ----------------------------------------------------------------------------
# Find Libraries
# ----------------------------------------------------------------------------
FIND_PACKAGE(Caffe REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

# ----------------------------------------------------------------------------
# Add Libraries
# ----------------------------------------------------------------------------
include_directories(${Caffe_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# ----------------------------------------------------------------------------
# Add Definition
# ----------------------------------------------------------------------------
add_definitions(${Caffe_DEFINITIONS})    # ex. -DCPU_ONLY

# ----------------------------------------------------------------------------
# I dont know what this is
# ----------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 11)

# ----------------------------------------------------------------------------
# Add source files
# ----------------------------------------------------------------------------
add_executable(${PROJECT_NAME} main.cpp)

# ----------------------------------------------------------------------------
# Link libraries to project
# ----------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME} ${Caffe_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} )